Bug 413180: Stop distributing span pct-width to cols when there are only 0-width cols left.  r+sr=dbaron a=beltzner